// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FormInput aria-invalid have \`false\` when there is error 1`] = `
<div>
  <input
    aria-invalid="false"
    class="bg-white border border-zinc-900/20 text-zinc-900 text-sm rounded-full block w-full px-4 py-2 aria-[invalid=true]:bg-red-100 aria-[invalid=true]:border-red-900  aria-[invalid=true]:text-red-900"
  />
</div>
`;

exports[`FormInput aria-invalid have \`true\` when there is an error 1`] = `
<div>
  <input
    aria-invalid="true"
    class="bg-white border border-zinc-900/20 text-zinc-900 text-sm rounded-full block w-full px-4 py-2 aria-[invalid=true]:bg-red-100 aria-[invalid=true]:border-red-900  aria-[invalid=true]:text-red-900"
  />
  <div
    class="mt-2"
  >
    <p
      class="text-xs text-red-900"
      role="alert"
    >
      Amount is a mandatory field, for example 123.45
    </p>
  </div>
</div>
`;
